Logout//lista-users

--- a/views/forum.hbs
+++ b/views/forum.hbs
@@ -24,7 +24,7 @@
   <button type="submit">Eliminar Post</button>
 </form>
 
-      <p>Publicado el {{this.createdAt}}</p>
+      <p>Publicado el {{this.createdAt}} Por el usuario: {{this.user.username}}</p>
   
     </header>
     <p>{{this.body}}</p>
