--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,6 +16,13 @@
       <a href="/feedback/students">All Students Feedbacks</a>
     {{/if}}
     <a href="/forum">Foro</a>
+  <!-- tus otros enlaces aquí -->
+  <a href="/usuarios">Usuarios Registrados</a>
+
+    <!-- Enlace para la página de Registro -->
+    <a href="/auth/register-page">Register</a>
+
+
   </nav>
   {{{body}}}
 </body>
