--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -18,4 +18,7 @@
       body: {{this.body}} - frustration: {{this.frustrationLevel}}
     </li>
   {{/each}}
+  <form action="/auth/logout" method="POST" style="margin-top: 20px;">
+  <input type="submit" value="Cerrar Sesión">
+</form>
 </ul>
